--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     box-sizing: border-box;
+    font-family: Caveat, 'Segoe UI', Tahoma, Geneva, cursive;
 }
 
 :root {
@@ -13,7 +14,7 @@ body {
 
 nav {
     width: 100%;
-    height: 200px;
+    height: 150px;
     background-color: red; /* Red watercolor brushstrokes same with divs */
     grid-template-areas: 'h1 . navlist';
     grid-template-columns: 2fr .5fr 2fr;
@@ -29,9 +30,12 @@ nav ul {
     display: flex;
     grid-area: navlist;
     justify-content: space-between;
+    list-style-type: none;
+
 }
 
 nav ul li a {
     color: white;
     text-decoration: none;
+    font-size: 2rem;
 }
