--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: Caveat, 'Segoe UI', Tahoma, Geneva, cursive;
+    font-family: cursive;
 }
 
 :root {
@@ -13,29 +14,84 @@ body {
 }
 
 nav {
+    display: grid;
     width: 100%;
-    height: 150px;
+    height: 100px;
     background-color: red; /* Red watercolor brushstrokes same with divs */
     grid-template-areas: 'h1 . navlist';
-    grid-template-columns: 2fr .5fr 2fr;
+    grid-template-columns: 4fr .5fr 4fr;
     align-items: center;
     color: white;
 }
 
 nav h1 {
     grid-area: h1;
+    font-size: 3rem;
+    margin-left: 1rem;
+}
+
+nav ul, footer ul {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    margin-right: 1rem;
 }
 
 nav ul {
-    display: flex;
     grid-area: navlist;
-    justify-content: space-between;
-    list-style-type: none;
-
 }
 
 nav ul li a {
     color: white;
-    text-decoration: none;
     font-size: 2rem;
+}
+
+ul li a, ul li {
+    text-decoration: none;
+}
+
+.form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form h1 {
+    font-size: 3rem;
+    margin-top: 2rem;
+    text-align: center;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    background-color: black;
+    margin-top: 1rem;
+}
+
+.form iframe {
+    display: none;
+}
+
+footer {
+    background-color: royalblue;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 75px;
+    color: white;
+    text-align: center;
+    padding: 1rem;
+    display: grid;
+    grid-template-areas: 'title . icons';
+    grid-template-columns: 2fr 2fr 1fr;
+}
+
+footer ul {
+    grid-area: icons;
+}
+
+footer ul li img {
+    width: 50px;
+    height: 50px;
 }
