--- a/css/style.css
+++ b/css/style.css
@@ -50,16 +50,41 @@ ul li a, ul li {
     text-decoration: none;
 }
 
-.form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.formdrop {
+    text-align: center;
+    height: fit-content;
+    cursor: pointer;
 }
 
-.form h1 {
+.formdrop h3 {
     font-size: 3rem;
     margin-top: 2rem;
+    margin: 1rem;
+}
+
+#ideaform {
+    height: 50vh;
+}
+
+#form {
+    overflow: hidden;
     text-align: center;
+    width: 100%;
+    transition: 5s;
+}
+
+#form iframe {
+    height: 55vh;
+    width: 90%;
+}
+
+.none {
+    height: 0;
+    transition: 1s;
+}
+
+section {
+    position: relative;
 }
 
 .line {
@@ -70,13 +95,12 @@ ul li a, ul li {
 }
 
 .form iframe {
-    display: none;
+    width: 95%;
+    margin: 0 auto;
 }
 
 footer {
     background-color: royalblue;
-    position: absolute;
-    bottom: 0;
     width: 100%;
     height: 75px;
     color: white;
@@ -94,4 +118,5 @@ footer ul {
 footer ul li img {
     width: 50px;
     height: 50px;
+    border-radius: 5px;
 }
